<resources>
    <string name="app_name">Med Plat</string>
    <string name="welcome_text">Welcome!</string>
    <string name="please_login_text">Please login here</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="remember_text">Remember me</string>
    <string name="login_text">Login</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="sign_up_text">Sign up</string>
    <string name="email_text">Email</string>
    <string name="register_text">Register</string>
    <string name="name_text">Name</string>
    <string name="phone_text">Phone number</string>
    <string name="fitbit_text">Fitbit ID</string>

    <string name="home_text">Home</string>
    <string name="enter_daily_values_text">Enter daily values</string>
    <string name="physiological_data_text">Physiological data</string>
    <string name="emergency_contacts_text">Contacts</string>
    <string name="contacts_text">Emergency contacts</string>
    <string name="caregiver_profile_text">Caregiver profile</string>
    <string name="medical_data_fitbit">Medical data</string>
    <string name="medical_topics_text">Medical Topics</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="services_text">Services</string>
    <string name="assistant_text">Ask AI Assistant</string>

    <string name="today_text">TODAY</string>
    <string name="hrv_hint_text">Enter HRV...</string>
    <string name="spo2_hint_text">Enter spO2...</string>
    <string name="sbb_hint_text">Enter SBP...</string>
    <string name="dbp_hint_text">Enter DBP...</string>
    <string name="hrv_text">Enter HRV:</string>
    <string name="sbp_text">Enter SBP:</string>
    <string name="spo2_text">Enter spO2:</string>
    <string name="dbp_text">Enter DBP:</string>
    <string name="temperature_text">Enter temperature:</string>
    <string name="temperature_hint_text">Enter temp...</string>
    <string name="glucose_text">Enter glucose:</string>
    <string name="glucose_hint_text">Enter glucose...</string>
    <string name="save_text">Save</string>
    <string name="insertion_success">Data inserted successfully!</string>
    <string name="insertion_failure">Failed to insert data. Please try again.</string>
    <string name="insertion_fail_input">"Invalid input, please fill up all the inputs"</string>

    <string name="medical_data_title">See your medical data</string>
    <string name="no_data_available">No data available</string>

    <string name="caretaker_name_profile">Roxana Dorobantu</string>
    <string name="caregiver_simple_text">Caregiver</string>
    <string name="caretaker_description">As your dedicated caretaker, I am here to provide compassionate support and assistance whenever you need it.</string>
    <string name="phone_number_caretaker_text">0727455324</string>
    <string name="email_caretaker_text">mihneasebastianburlacu@gmail.com</string>

    <string name="enter_name">Enter name:</string>
    <string name="enter_name_input">Enter name...</string>
    <string name="enter_number_input">Enter number...</string>
    <string name="enter_number_text">Enter phone number:</string>
    <string name="enter_email_text">Enter email:</string>
    <string name="enter_email_input">Enter email address...</string>
    <string name="contact_list_text">See your emergency contact list:</string>
    <string name="logout_text">Logout</string>

    <string name="medical_assistant">Medical Assistant</string>
    <string name="send_text">send</string>
    <string name="enter_message_text">Enter Message...</string>
    <string name="assistant_description">This AI assistant can answer health-related questions based on medical knowledge.It is not a substitute for professional medical advice. Always consult a healthcare provider before making decisions.</string>
    <string name="user_icon_chat_text">User Icon</string>
    <string name="ai_assistant_name">AI Assistant</string>

    <string-array name="spinner_items">
        <item>Heart rate variability</item>
        <item>Systolic blood pressure</item>
        <item>Diastolic blood pressure</item>
        <item>Oxygen saturation</item>
        <item>Temperature</item>
        <item>Glucose</item>
    </string-array>
</resources>