<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home_text"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/nav_values"
        android:title="@string/enter_daily_values_text"
        android:icon="@drawable/ic_daily" />

    <item
        android:id="@+id/nav_physiological_data"
        android:title="@string/physiological_data_text"
        android:icon="@drawable/ic_physiological_data" />

    <item
        android:id="@+id/nav_contacts"
        android:title="@string/emergency_contacts_text"
        android:icon="@drawable/ic_emergency_contacts" />

    <item
        android:id="@+id/nav_caregiver"
        android:title="@string/caregiver_profile_text"
        android:icon="@drawable/ic_caretaker" />

    <item
        android:id="@+id/nav_medical_topics"
        android:title="@string/medical_topics_text"
        android:icon="@drawable/ic_topic" />

    <item
        android:id="@+id/nav_medical_assistant"
        android:title="@string/medical_assistant"
        android:icon="@drawable/ic_assistant" />
</menu>