<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_top_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_bottom_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_start_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_end_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_top_guideline" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton_regular"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/secondary_color"
        android:textSize="@dimen/app_title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_between_app_details_and_information"
        android:text="@string/welcome_text"
        android:textAppearance="@style/InformationText"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/app_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:text="@string/please_login_text"
        android:textAppearance="@style/InformationText"
        app:layout_constraintStart_toEndOf="@id/welcome_text"
        app:layout_constraintTop_toTopOf="@id/welcome_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_vertical_between_elements"
        android:background="@drawable/sh_input_login"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="@dimen/general_radius"
        app:boxCornerRadiusBottomStart="@dimen/general_radius"
        app:boxCornerRadiusTopEnd="@dimen/general_radius"
        app:boxCornerRadiusTopStart="@dimen/general_radius"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:startIconDrawable="@drawable/ic_username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_text"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/input_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_between_inputs"
        android:background="@drawable/sh_input_login"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="@dimen/general_radius"
        app:boxCornerRadiusBottomStart="@dimen/general_radius"
        app:boxCornerRadiusTopEnd="@dimen/general_radius"
        app:boxCornerRadiusTopStart="@dimen/general_radius"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/username_input"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/input_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_inputs"
        android:text="@string/remember_text"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/password_input" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_vertical_between_elements"
        android:background="@drawable/sh_login_button"
        android:text="@string/login_text"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/checkbox" />

    <LinearLayout
        android:id="@+id/register_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_between_elements"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/no_account_text"
            android:textColor="@color/black"
            android:textSize="@dimen/register_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_up_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/sign_up_text"
            android:textColor="@color/secondary_color"
            android:textSize="@dimen/register_text_size"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>