<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_top_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_bottom_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton_regular"
        android:text="@string/enter_daily_values_text"
        android:textAllCaps="true"
        android:textColor="@color/secondary_color"
        android:textSize="@dimen/app_title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_top_guideline" />

    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_inputs_title"
        android:text="@string/today_text"
        android:textAppearance="@style/InformationTextBold"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/menu_title" />

    <ImageView
        android:id="@+id/arrow_left"
        android:layout_width="@dimen/arrow_size"
        android:layout_height="@dimen/arrow_size"
        android:layout_marginStart="@dimen/margin_small"
        android:contentDescription="@string/today_text"
        android:src="@drawable/ic_arrow_left"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toTopOf="@id/date_text"
        tools:visibility="visible" />

    <ImageView
        android:layout_width="@dimen/arrow_size"
        android:layout_height="@dimen/arrow_size"
        android:layout_marginEnd="@dimen/margin_small"
        android:contentDescription="@string/today_text"
        android:src="@drawable/ic_arrow_right"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintTop_toTopOf="@id/date_text"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/hrv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_inputs_title"
        android:text="@string/hrv_text"
        android:textAppearance="@style/InformationTextBold"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/date_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hrv_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:background="@drawable/sh_input_login"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="@dimen/general_radius"
        app:boxCornerRadiusBottomStart="@dimen/general_radius"
        app:boxCornerRadiusTopEnd="@dimen/general_radius"
        app:boxCornerRadiusTopStart="@dimen/general_radius"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toStartOf="@id/vertical_middle_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/hrv_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hrv_hint_text"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/input_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/spO2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_between_elements"
        android:text="@string/spo2_text"
        android:textAppearance="@style/InformationTextBold"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/hrv_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spO2_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:background="@drawable/sh_input_login"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="@dimen/general_radius"
        app:boxCornerRadiusBottomStart="@dimen/general_radius"
        app:boxCornerRadiusTopEnd="@dimen/general_radius"
        app:boxCornerRadiusTopStart="@dimen/general_radius"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toStartOf="@id/vertical_middle_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/spO2_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/spo2_hint_text"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/input_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sbp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_inputs_title"
        android:text="@string/sbp_text"
        android:textAppearance="@style/InformationTextBold"
        app:layout_constraintStart_toEndOf="@id/vertical_middle_guideline"
        app:layout_constraintTop_toBottomOf="@id/date_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sbp_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:background="@drawable/sh_input_login"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="@dimen/general_radius"
        app:boxCornerRadiusBottomStart="@dimen/general_radius"
        app:boxCornerRadiusTopEnd="@dimen/general_radius"
        app:boxCornerRadiusTopStart="@dimen/general_radius"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_middle_guideline"
        app:layout_constraintTop_toBottomOf="@id/sbp_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sbb_hint_text"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/input_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dbp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_between_elements"
        android:text="@string/dbp_text"
        android:textAppearance="@style/InformationTextBold"
        app:layout_constraintStart_toEndOf="@id/vertical_middle_guideline"
        app:layout_constraintTop_toBottomOf="@id/sbp_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dbp_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:background="@drawable/sh_input_login"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="@dimen/general_radius"
        app:boxCornerRadiusBottomStart="@dimen/general_radius"
        app:boxCornerRadiusTopEnd="@dimen/general_radius"
        app:boxCornerRadiusTopStart="@dimen/general_radius"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_middle_guideline"
        app:layout_constraintTop_toBottomOf="@id/dbp_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dbp_hint_text"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/input_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/temperature_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_between_elements"
        android:text="@string/temperature_text"
        android:textAppearance="@style/InformationTextBold"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/spO2_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/temperature_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:background="@drawable/sh_input_login"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="@dimen/general_radius"
        app:boxCornerRadiusBottomStart="@dimen/general_radius"
        app:boxCornerRadiusTopEnd="@dimen/general_radius"
        app:boxCornerRadiusTopStart="@dimen/general_radius"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toStartOf="@id/vertical_middle_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/temperature_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/temperature_hint_text"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/input_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/glucose_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical_between_elements"
        android:text="@string/glucose_text"
        android:textAppearance="@style/InformationTextBold"
        app:layout_constraintStart_toEndOf="@id/vertical_middle_guideline"
        app:layout_constraintTop_toBottomOf="@id/dbp_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/glucose_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:background="@drawable/sh_input_login"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="@dimen/general_radius"
        app:boxCornerRadiusBottomStart="@dimen/general_radius"
        app:boxCornerRadiusTopEnd="@dimen/general_radius"
        app:boxCornerRadiusTopStart="@dimen/general_radius"
        app:boxStrokeColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_middle_guideline"
        app:layout_constraintTop_toBottomOf="@id/glucose_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/glucose_hint_text"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/input_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_between_inputs_title"
        android:background="@drawable/sh_login_button"
        android:text="@string/save_text"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toStartOf="@id/vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/vertical_start_guideline"
        app:layout_constraintTop_toBottomOf="@id/temperature_input" />

</androidx.constraintlayout.widget.ConstraintLayout>