<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_medium">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/contact_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:elevation="@dimen/general_elevation"
        android:focusable="true"
        android:outlineSpotShadowColor="@color/white"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/general_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textAppearance="@style/FitbitInfoNameText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Mihnea Burlacu" />

            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_name_text">

                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:contentDescription="@string/email_text"
                    android:src="@drawable/ic_email_black" />

                <TextView
                    android:id="@+id/contact_email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/FitbitInfoText"
                    tools:text="@string/email_caretaker_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/margin_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_layout">

                <ImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:contentDescription="@string/phone_text"
                    android:src="@drawable/ic_phone_black" />

                <TextView
                    android:id="@+id/contact_phone_number_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/FitbitInfoText"
                    tools:text="@string/phone_number_caretaker_text" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>